--- a/requirements.txt
+++ b/requirements.txt
@@ -1,348 +1,9 @@
-aiodns==3.5.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.3.2
-alabaster==0.7.13
-alpaca-py==0.42.1
-alpaca-trade-api==3.2.0
-altair==5.0.1
-annotated-types==0.7.0
-anyio==4.0.0
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-astroid==2.15.5
-asttokens==2.2.1
-async-lru==2.0.4
-atomicwrites==1.4.1
-attrs==23.1.0
-autopep8==2.0.2
-Babel==2.12.1
-backcall==0.2.0
-backtrader==1.9.78.123
-bcrypt==4.0.1
-beautifulsoup4==4.13.4
-binaryornot==0.4.4
-black==23.3.0
-bleach==6.0.0
-blinker==1.6.2
-bs4==0.0.1
-cachetools==5.3.1
-ccxt==4.5.4
-certifi==2025.6.15
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
-cloudpickle==3.1.1
-colorama==0.4.6
-comm==0.1.3
-contourpy==1.1.0
-cookiecutter==2.1.1
-cryptography==41.0.1
-cssselect==1.2.0
-curl_cffi==0.13.0
-cycler==0.11.0
-dash==3.2.0
-dask==2025.5.1
-data_fetcher==0.1.9
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-deprecation==2.1.0
-diff-match-patch==20230430
-dill==0.4.0
-distro==1.9.0
-docling==2.38.1
-docling-core==2.38.2
-docling-ibm-models==3.6.0
-docling-parse==4.1.0
-docstring-to-markdown==0.12
-docutils==0.20.1
-easyocr==1.7.2
-et-xmlfile==1.1.0
-exceptiongroup==1.1.2
-executing==1.2.0
-fake-useragent==1.1.3
-fastjsonschema==2.17.1
-feedparser==6.0.10
-filelock==3.18.0
-filetype==1.2.0
-flake8==6.0.0
-Flask==2.3.2
-fonttools==4.41.0
-fqdn==1.5.1
-frozendict==2.3.8
-frozenlist==1.7.0
-fsspec==2025.5.1
-ftfy==6.3.1
-gevent==22.10.2
-gitdb==4.0.10
-GitPython==3.1.32
-glossapi==0.0.13
-greenlet==2.0.2
-gunicorn==23.0.0
-h11==0.16.0
-hf-xet==1.1.5
-html5lib==1.1
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.33.1
-idna==3.4
-imageio==2.37.0
-imagesize==1.4.1
-importlib-metadata==6.7.0
-inflection==0.5.1
-intervaltree==3.1.0
-ipykernel==6.24.0
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.1
-isoduration==20.11.0
-isort==5.12.0
-itsdangerous==2.1.2
-jaraco.classes==3.2.3
-jedi==0.18.2
-jellyfish==1.0.0
-Jinja2==3.1.2
-jinja2-time==0.2.0
-jiter==0.10.0
-joblib==1.3.2
-json5==0.9.14
-jsonlines==3.1.0
-jsonpointer==2.4
-jsonref==1.1.0
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.8.0
-jupyter-lsp==2.2.0
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.9.1
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.7
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.9
-jupyterlab_server==2.25.0
-keyring==24.2.0
-kiwisolver==1.4.4
-latex2mathml==3.78.0
-lazy-object-proxy==1.9.0
-lazy_loader==0.4
-locket==1.0.0
-lxml==4.9.3
-markdown-it-py==3.0.0
-marko==2.1.4
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdurl==0.1.2
-mistune==3.0.1
-more-itertools==9.1.0
-mpire==2.10.2
-mpmath==1.3.0
-msgpack==1.0.3
-multidict==6.5.1
-multiprocess==0.70.18
-multitasking==0.0.11
-munkres==1.1.4
-mypy-extensions==1.0.0
-narwhals==2.5.0
-nbclient==0.8.0
-nbconvert==7.6.0
-nbformat==5.9.0
-nest-asyncio==1.5.6
-networkx==3.5
-ninja==1.11.1.4
-notebook==7.0.6
-notebook_shim==0.2.3
-numpy==1.26.4
-numpydoc==1.5.0
-openai==1.98.0
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-openpyxl==3.1.5
-outcome==1.2.0
-overrides==7.4.0
-packaging==23.1
-pandas==2.3.2
-pandas-datareader==0.10.0
-pandocfilters==1.5.0
-paramiko==3.2.0
-parse==1.19.1
-parso==0.8.3
-partd==1.4.2
-pathspec==0.11.1
-peewee==3.18.2
-pexpect==4.8.0
-pickleshare==0.7.5
-pillow==11.2.1
-platformdirs==3.8.0
-plotly==6.3.0
-pluggy==1.2.0
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-propcache==0.3.2
-protobuf==4.23.4
-psutil==5.9.5
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==21.0.0
-pycares==4.11.0
-pyclipper==1.3.0.post6
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pydeck==0.8.0
-pydocstyle==6.3.0
-pyee==8.2.2
-pyflakes==3.0.1
-Pygments==2.15.1
-pykalman==0.10.1
-pylatexenc==2.10
-pylint==2.17.4
-pylint-venv==3.0.2
-pyls-spyder==0.4.0
-Pympler==1.0.1
-PyNaCl==1.5.0
-pyparsing==3.0.9
-pypdfium2==4.30.1
-pyppeteer==1.0.2
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.1
-PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.2
-pyquery==2.0.0
-pyrsistent==0.19.3
-PySocks==1.7.1
-python-bidi==0.6.6
-python-dateutil==2.8.2
-python-docx==1.2.0
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-python-lsp-black==1.3.0
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.7.4
-python-pptx==1.0.2
-python-slugify==8.0.1
-pytoolconfig==1.2.5
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-pywin32==306
-pywin32-ctypes==0.2.2
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.0
-QDarkStyle==3.1
-qstylizer==0.2.2
-QtAwesome==1.2.3
-qtconsole==5.4.3
-QtPy==2.3.1
-referencing==0.30.2
-regex==2024.11.6
-requests==2.32.4
-requests-html==0.10.0
-retrying==1.4.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.4.2
-rope==1.9.0
-rpds-py==0.10.6
-rtree==1.4.0
-safetensors==0.5.3
-scikit-base==0.12.3
-scikit-image==0.25.2
-scikit-learn==1.3.2
-scipy==1.16.0
-seaborn==0.13.0
-selenium==4.10.0
-semchunk==2.2.2
-Send2Trash==1.8.2
-sentence-transformers==5.0.0
-sgmllib3k==1.0.0
-shapely==2.1.1
-shellingham==1.5.4
-six==1.16.0
-sklearn==0.0.post10
-smmap==5.0.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-Sphinx==7.0.1
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-spyder==5.4.3
-spyder-kernels==2.4.4
-SQLAlchemy==2.0.41
-sseclient-py==1.8.0
-stack-data==0.6.2
-streamlit==1.25.0
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==8.2.2
-terminado==0.17.1
-text-unidecode==1.3
-textdistance==4.5.0
-threadpoolctl==3.2.0
-three-merge==0.1.1
-tifffile==2025.6.11
-tinycss2==1.2.1
-tokenizers==0.21.2
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.8
-toolz==0.12.0
-torch==2.7.1
-torchvision==0.22.1
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.9.0
-transformers==4.52.4
-trio==0.22.2
-trio-websocket==0.10.3
-typer==0.16.0
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2023.3
-tzlocal==4.3.1
-ujson==5.8.0
-uri-template==1.3.0
-urllib3==1.26.16
-validators==0.20.0
-w3lib==2.1.1
-watchdog==3.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webdriver-manager==4.0.0
-webencodings==0.5.1
-websocket==0.2.1
-websocket-client==1.6.1
-websockets==15.0.1
-Werkzeug==2.3.6
-whatthepatch==1.0.5
-widgetsnbextension==4.0.9
-wikipedia==1.4.0
-wrapt==1.15.0
-wsproto==1.2.0
-xlsxwriter==3.2.5
-yahoo-fin==0.8.9.1
-yapf==0.40.1
-yarl==1.20.1
-yfinance==0.2.66
-zipp==3.15.0
-zope.event==5.0
-zope.interface==6.0
+pandas
+numpy
+yfinance
+scipy
+dash
+gunicorn
+plotly
+requests
+lxml
